fix scrolling on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -155,6 +155,7 @@ html, body {
   left: 50%;
   margin-left: -250px;
   margin-top: -250px;
+  overflow: scroll;
 
   #close {
     position: absolute;
@@ -174,15 +175,25 @@ html, body {
       font-size: 16px;
     }
   }
+}
 
-  @media (max-width: 500px) {
-      width: 100%;
-      margin-left: 0;
-      left: 0;
+.modal-open {
+  overflow: hidden;
+}
 
-    #content div {
-      margin: 10px 0;
-      font-size: 14px;
+@media (max-width: 500px), (max-height: 500px) {
+  #modal {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    left: 0;
+    top: 0;
+
+    #content  {
+      div {
+        margin: 10px 0;
+        font-size: 14px;
+      }
     }
   }
 }
